main 메서드에서 테스트 및 잘못된 구조 변경